--- a/API/API.csproj
+++ b/API/API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="global.json" />
+  </ItemGroup>
+
 </Project>
