--- a/client-app/package.json
+++ b/client-app/package.json
@@ -24,7 +24,8 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.9.0",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "@types/yup": "^0.32.0"
   }
 }
