--- a/client-app/package.json
+++ b/client-app/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.9.0",
+    "@types/react-datepicker": "^4.8.0",
     "@types/uuid": "^9.0.0",
     "@types/yup": "^0.32.0"
   }
